TT-962: Make error responses consistent
Dropwizard by default returns ErrorMessage { code, message }, we were returning
ErrorBody { reason, message }. This commit standardises on Dropwizard's format
and makes sure that the errors we're returning are consistent and return the
appropriate level of detail.

Authors: @richardtowers @georgievh @rachaelbooth
