# architecture-decisions/verify-service-provider-api.swagger.yml
@@ -26,11 +26,16 @@ paths:
             An error due to a problem with creating the SAML request. Can be
             because of given parameters are not recognized.
           schema:
-            $ref: '#/definitions/ErrorBody'
+            $ref: '#/definitions/ErrorMessage'
+        '422':
+          description: >-
+            An error due to a JSON request in an invalid format (e.g. missing mandatory parameters).
+          schema:
+            $ref: '#/definitions/ErrorMessage'
         '500':
           description: An error due to an internal server error.
           schema:
-            $ref: '#/definitions/ErrorBody'
+            $ref: '#/definitions/ErrorMessage'
   /translate-response:
     post:
       consumes:
@@ -54,15 +59,15 @@ paths:
         '400':
           description: an error due to a problem with translating the Response
           schema:
-            $ref: '#/definitions/ErrorBody'
+            $ref: '#/definitions/ErrorMessage'
         '401':
           description: Response identifies failures when authenticating the user
           schema:
-            $ref: '#/definitions/ErrorBody'
+            $ref: '#/definitions/ErrorMessage'
         '500':
           description: an error due to an internal server error
           schema:
-            $ref: '#/definitions/ErrorBody'
+            $ref: '#/definitions/ErrorMessage'
 definitions:
   ExpectedLevelOfAssurance:
     description: Level of assurance requested by the Service
@@ -83,10 +88,10 @@ definitions:
       enum:
         - SUCCESS_MATCH
         - ACCOUNT_CREATION
-        - NO_MATCH                                                                                                         |
-        - CANCELLATION                                                                                                     |
-        - AUTHENTICATION_FAILED                                                                                           |
-        - REQUEST_ERROR                                                                                                 |
+        - NO_MATCH
+        - CANCELLATION
+        - AUTHENTICATION_FAILED
+        - REQUEST_ERROR
         - INTERNAL_SERVER_ERROR
   RequestGenerationBody:
     type: object
@@ -151,20 +156,14 @@ definitions:
       attributes:
         description: An optional attributes-object if no match was possible
         $ref: '#/definitions/Attributes'
-  ErrorBody:
+  ErrorMessage:
     type: object
     required:
-      - reason
+      - code
       - message
     properties:
-      reason:
-        type: string
-        enum:
-          - BAD_REQUEST
-          - INTERNAL_SERVER_ERROR
-          - AUTHENTICATION_FAILED
-          - NO_MATCH
-          - CANCELLATION
+      code:
+        type: number
       message:
         type: string
   Attributes:
