# src/main/java/uk/gov/ida/verifyserviceprovider/resources/TranslateSamlResponseResource.java
@@ -1,7 +1,7 @@
 package uk.gov.ida.verifyserviceprovider.resources;
 
+import io.dropwizard.jersey.errors.ErrorMessage;
 import uk.gov.ida.saml.core.validation.SamlTransformationErrorException;
-import uk.gov.ida.verifyserviceprovider.dto.ErrorBody;
 import uk.gov.ida.verifyserviceprovider.dto.TranslateSamlResponseBody;
 import uk.gov.ida.verifyserviceprovider.exceptions.SamlResponseValidationException;
 import uk.gov.ida.verifyserviceprovider.services.ResponseService;
@@ -41,7 +41,7 @@ public class TranslateSamlResponseResource {
         } catch (SamlResponseValidationException | SamlTransformationErrorException e) {
             return Response
                 .status(BAD_REQUEST)
-                .entity(new ErrorBody(BAD_REQUEST.name(), e.getMessage()))
+                .entity(new ErrorMessage(BAD_REQUEST.getStatusCode(), e.getMessage()))
                 .build();
         }
     }
